jdbc dynamic load